MDEV-12302 Execute triggers for foreign key updates/deletes