storage/innobase/handler/ha_innodb.cc
@@ -2303,6 +2303,141 @@ convert_error_code_to_mysql(
 	}
 }
 
+/********************************************************************//**
+Converts a MySQL error code to an InnoDB error code.
+@return InnoDB error code */
+static dberr_t
+convert_mysql_error_to_dberr(int mysql_error)
+{
+    switch (mysql_error) {
+				case 0:
+        	return DB_SUCCESS;
+
+        case HA_ERR_KEY_NOT_FOUND:
+            return DB_RECORD_NOT_FOUND;
+
+        case HA_ERR_FOUND_DUPP_KEY:
+        case HA_ERR_FOUND_DUPP_UNIQUE:
+            return DB_DUPLICATE_KEY;
+
+        case HA_ERR_RECORD_CHANGED:
+            return DB_RECORD_CHANGED;
+
+        case HA_ERR_CRASHED:
+            return DB_TABLE_CORRUPT;
+
+        case HA_ERR_OUT_OF_MEM:
+            return DB_OUT_OF_MEMORY;
+
+        case HA_ERR_NOT_A_TABLE:
+            return DB_TABLE_NOT_FOUND;
+
+        case HA_ERR_RECORD_DELETED:
+            return DB_RECORD_NOT_FOUND;
+
+        case HA_ERR_RECORD_FILE_FULL:
+        case HA_ERR_INDEX_FILE_FULL:
+            return DB_OUT_OF_FILE_SPACE;
+
+        case HA_ERR_UNSUPPORTED:
+            return DB_UNSUPPORTED;
+
+        case HA_ERR_TO_BIG_ROW:
+            return DB_TOO_BIG_RECORD;
+
+        case HA_ERR_CRASHED_ON_REPAIR:
+            return DB_TABLE_CORRUPT;
+
+        case HA_ERR_CRASHED_ON_USAGE:
+            return DB_TABLE_CORRUPT;
+
+        case HA_ERR_LOCK_WAIT_TIMEOUT:
+            return DB_LOCK_WAIT_TIMEOUT;
+
+        case HA_ERR_LOCK_TABLE_FULL:
+            return DB_LOCK_TABLE_FULL;
+
+        case HA_ERR_READ_ONLY_TRANSACTION:
+            return DB_READ_ONLY;
+
+        case HA_ERR_LOCK_DEADLOCK:
+            return DB_DEADLOCK;
+
+        case HA_ERR_CANNOT_ADD_FOREIGN:
+            return DB_CANNOT_ADD_CONSTRAINT;
+
+        case HA_ERR_NO_REFERENCED_ROW:
+            return DB_NO_REFERENCED_ROW;
+
+        case HA_ERR_ROW_IS_REFERENCED:
+            return DB_ROW_IS_REFERENCED;
+
+        case HA_ERR_NO_SAVEPOINT:
+            return DB_NO_SAVEPOINT;
+
+        case HA_ERR_NO_SUCH_TABLE:
+            return DB_TABLE_NOT_FOUND;
+
+        case HA_ERR_TABLE_EXIST:
+            return DB_TABLESPACE_EXISTS;
+
+        case HA_ERR_DROP_INDEX_FK:
+            return DB_CANNOT_DROP_CONSTRAINT;
+
+        case HA_ERR_FOREIGN_DUPLICATE_KEY:
+            return DB_FOREIGN_DUPLICATE_KEY;
+
+        case HA_ERR_TABLE_NEEDS_UPGRADE:
+            return DB_TABLE_CORRUPT;
+
+        case HA_ERR_TABLE_READONLY:
+            return DB_READ_ONLY;
+
+        case HA_ERR_TOO_MANY_CONCURRENT_TRXS:
+            return DB_TOO_MANY_CONCURRENT_TRXS;
+
+        case HA_ERR_INDEX_COL_TOO_LONG:
+            return DB_TOO_BIG_INDEX_COL;
+
+        case HA_ERR_INDEX_CORRUPT:
+            return DB_INDEX_CORRUPT;
+
+        case HA_ERR_UNDO_REC_TOO_BIG:
+            return DB_UNDO_RECORD_TOO_BIG;
+
+        case HA_FTS_INVALID_DOCID:
+            return DB_FTS_INVALID_DOCID;
+
+        case HA_ERR_TABLESPACE_EXISTS:
+            return DB_TABLESPACE_EXISTS;
+
+        case HA_ERR_DISK_FULL:
+            return DB_IO_ERROR;
+
+        case HA_ERR_FTS_TOO_MANY_WORDS_IN_PHRASE:
+            return DB_FTS_TOO_MANY_WORDS_IN_PHRASE;
+
+        case HA_ERR_DECRYPTION_FAILED:
+            return DB_DECRYPTION_FAILED;
+
+        case HA_ERR_FK_DEPTH_EXCEEDED:
+            return DB_FOREIGN_EXCEED_MAX_CASCADE;
+
+        case HA_ERR_TABLESPACE_MISSING:
+            return DB_TABLESPACE_NOT_FOUND;
+
+        case HA_ERR_LOCAL_TMP_SPACE_FULL:
+            return DB_TEMP_FILE_WRITE_FAIL;
+
+        case HA_ERR_GLOBAL_TMP_SPACE_FULL:
+            return DB_TEMP_FILE_WRITE_FAIL;
+
+        default:
+            return DB_ERROR;
+    }
+}
+
+
 /*************************************************************//**
 Prints info of a THD object (== user session thread) to the given file. */
 void
@@ -8497,6 +8632,33 @@ ATTRIBUTE_COLD bool wsrep_append_table_key(MYSQL_THD thd, const dict_table_t &ta
 }
 #endif /* WITH_WSREP */
 
+int ha_innobase::update_prebuilt_upd_buf()
+{
+  DBUG_ENTER("ha_innobase::update_prebuilt_upd_buf");
+  if (m_upd_buf == NULL) {
+    ut_ad(m_upd_buf_size == 0);
+
+    /* Create a buffer for packing the fields of a record. Why
+    table->reclength did not work here? Obviously, because char
+    fields when packed actually became 1 byte longer, when we also
+    stored the string length as the first byte. */
+
+    m_upd_buf_size = table->s->reclength + table->s->max_key_length
+                     + MAX_REF_PARTS * 3;
+
+    m_upd_buf = reinterpret_cast<uchar*>(my_malloc(PSI_INSTRUMENT_ME,
+                    m_upd_buf_size,
+                    MYF(MY_WME)));
+
+    if (m_upd_buf == NULL) {
+      m_upd_buf_size = 0;
+      DBUG_RETURN(HA_ERR_OUT_OF_MEM);
+    }
+  }
+  DBUG_RETURN(0);
+}
+
+
 /**
 Updates a row given as a parameter to a new value. Note that we are given
 whole rows, not just the fields which are updated: this incurs some
@@ -8525,27 +8687,8 @@ ha_innobase::update_row(
 		DBUG_RETURN(err);
 	}
 
-	if (m_upd_buf == NULL) {
-		ut_ad(m_upd_buf_size == 0);
-
-		/* Create a buffer for packing the fields of a record. Why
-		table->reclength did not work here? Obviously, because char
-		fields when packed actually became 1 byte longer, when we also
-		stored the string length as the first byte. */
-
-		m_upd_buf_size = table->s->reclength + table->s->max_key_length
-			+ MAX_REF_PARTS * 3;
-
-		m_upd_buf = reinterpret_cast<uchar*>(
-			my_malloc(PSI_INSTRUMENT_ME,
-                                  m_upd_buf_size,
-				MYF(MY_WME)));
-
-		if (m_upd_buf == NULL) {
-			m_upd_buf_size = 0;
-			DBUG_RETURN(HA_ERR_OUT_OF_MEM);
-		}
-	}
+	if (int ret= update_prebuilt_upd_buf())
+		DBUG_RETURN(ret);
 
 	upd_t*		uvect = row_get_prebuilt_update_vector(m_prebuilt);
 	ib_uint64_t	autoinc;
@@ -8568,6 +8711,11 @@ ha_innobase::update_row(
 		This is fix for http://bugs.mysql.com/29157 */
 		DBUG_RETURN(HA_ERR_RECORD_IS_THE_SAME);
 	} else {
+    que_thr_t *thr = que_fork_get_first_thr(m_prebuilt->upd_graph);
+    if (table->pos_in_table_list->prelocking_placeholder
+        != TABLE_LIST::PRELOCK_FK) {
+      thr->fk_cascade_depth = 0;
+    }
 		if (m_prebuilt->upd_node->is_delete) {
 			trx->fts_next_doc_id = 0;
 		}
@@ -8691,6 +8839,12 @@ ha_innobase::delete_row(
 	if (!m_prebuilt->upd_node) {
 		row_get_prebuilt_update_vector(m_prebuilt);
 	}
+
+  que_thr_t *thr = que_fork_get_first_thr(m_prebuilt->upd_graph);
+  if (table->pos_in_table_list->prelocking_placeholder
+      != TABLE_LIST::PRELOCK_FK) {
+    thr->fk_cascade_depth = 0;
+  }
 
 	/* This is a delete */
 	m_prebuilt->upd_node->is_delete = table->versioned_write(VERS_TRX_ID)
@@ -21408,4 +21562,232 @@ ulint buf_pool_size_align(ulint size) noexcept
   } else {
     return (size / m + 1) * m;
   }
+}
+
+bool innodb_execute_triggers(upd_node_t *node, bool after) 
+{
+	bool is_delete = (node->is_delete == PLAIN_DELETE);
+  btr_pcur_t	*pcur = node->pcur;
+  char db_buf[NAME_LEN + 1];
+  char tbl_buf[NAME_LEN + 1];
+  ulint db_buf_len, tbl_buf_len;
+  dict_table_t *table = node->table;
+  dict_index_t *clust_index = dict_table_get_first_index(table);
+  if (!table->parse_name(db_buf, tbl_buf, &db_buf_len, &tbl_buf_len)) {
+    return false;
+  }
+
+  THD *thd = current_thd;
+  TABLE *maria_table = find_fk_open_table(thd, db_buf, db_buf_len, tbl_buf, 
+                                          tbl_buf_len);
+
+
+  trg_event_type trigger_event = is_delete ? TRG_EVENT_DELETE : TRG_EVENT_UPDATE;
+  trg_action_time_type trigger_time = after ? TRG_ACTION_AFTER: TRG_ACTION_BEFORE; 
+
+  if (!maria_table->triggers ||  
+      !maria_table->triggers->has_triggers(trigger_event, trigger_time)) 
+      return true;
+  
+  ha_innobase *handler = (ha_innobase*)maria_table->file;
+  row_prebuilt_t *prebuilt = handler->get_prebuilt(table);
+
+  prebuilt->upd_node = node;
+  prebuilt->upd_graph = static_cast<que_fork_t*>(
+      que_node_get_parent(
+        pars_complete_graph_for_exec(
+        prebuilt->upd_node,
+        prebuilt->trx, prebuilt->heap,
+        prebuilt)));
+  prebuilt->upd_graph->state = QUE_FORK_ACTIVE; // ?
+
+
+  const rec_t* rec = btr_pcur_get_rec(pcur); 
+  const rec_offs*	offsets = rec_get_offsets(
+    rec, 
+    clust_index, 
+    nullptr, 
+    clust_index->n_core_fields, 
+    ULINT_UNDEFINED, 
+    &node->heap
+  );
+
+  if (!is_delete) {
+  if (node->upd_row == NULL) {
+    node->row = row_build(ROW_COPY_DATA, clust_index, rec,
+            offsets, NULL,
+            NULL, NULL, &node->upd_ext, node->heap);
+
+    node->upd_row = dtuple_copy(node->row, node->heap);
+    row_upd_replace(node->upd_row, &node->upd_ext,
+      clust_index, node->update, node->heap);
+  }
+
+  dtuple_t* entry = row_build_index_entry(node->upd_row, NULL, 
+                                          clust_index, 
+                                          node->heap);
+
+  ulint n_ext = dtuple_get_n_ext(node->upd_row);
+  
+  ulint size = rec_get_converted_size(clust_index, entry, n_ext);
+  byte *buf = static_cast<byte*>(mem_heap_alloc(node->heap, size));
+
+  rec_t *rec_upd = rec_convert_dtuple_to_rec(buf, clust_index, entry, n_ext);
+  const rec_offs* upd_offsets = rec_get_offsets(
+    rec_upd, clust_index, nullptr, 
+    clust_index->n_core_fields, 
+    ULINT_UNDEFINED, &node->heap);
+
+  //FIXME:Check return value
+  row_sel_store_mysql_rec(maria_table->record[0], prebuilt, rec_upd, 
+                          NULL, false, clust_index, upd_offsets); 
+  }
+
+  //FIXME: Check return value
+  row_sel_store_mysql_rec(maria_table->record[1], prebuilt, rec, NULL, 
+                          false, clust_index, offsets); 
+
+  maria_table->column_bitmaps_set(&maria_table->s->all_set, &maria_table->s->all_set);
+  //FIXME: Check return value
+  maria_table->triggers->process_triggers(thd, trigger_event, trigger_time, true); 
+
+  if (handler->update_prebuilt_upd_buf())
+    return false; // TODO: DB_OUT_OF_MEMORY
+
+
+  if (maria_table->vfield) {
+    maria_table->update_virtual_fields(handler, VCOL_UPDATE_FOR_WRITE);
+    maria_table->move_fields(maria_table->field, maria_table->record[1], maria_table->record[0]);
+    maria_table->update_virtual_fields(handler, VCOL_UPDATE_FOR_WRITE);
+    maria_table->move_fields(maria_table->field, maria_table->record[0], maria_table->record[1]);
+	}	
+  
+  ib_uint64_t autoinc;
+  dberr_t error= calc_row_difference(node->update, maria_table->record[1],
+                maria_table->record[0], maria_table,
+                handler->m_upd_buf,
+                handler->m_upd_buf_size,
+                prebuilt, autoinc);
+  if (error)
+    return false;
+
+  return true;
+}
+
+/********************************************************************//**
+Fetches the MySQL TABLE object corresponding to the InnoDB table 
+referenced in the given update node. 
+
+// FIXME: add error handling instead of returning nullptr
+@return Pointer to the TABLE object if found, or nullptr on error. */
+static
+TABLE *find_sql_table_for_update_node(upd_node_t* node) {
+  THD *thd= current_thd;
+  char db_buf[NAME_LEN + 1];
+  char tbl_buf[NAME_LEN + 1];
+  ulint db_buf_len, tbl_buf_len;
+  dict_table_t *table= node->table;
+  if (!table->parse_name(db_buf, tbl_buf, &db_buf_len, &tbl_buf_len)) {
+    return nullptr; // TODO: handle error
+  }
+
+  return find_fk_open_table(thd, db_buf, db_buf_len, tbl_buf, 
+                                          tbl_buf_len);
+}
+
+
+/********************************************************************//**
+Executes a cascading operation (DELETE or UPDATE) for a foreign key 
+constraint by invoking the appropriate action at the SQL layer. 
+
+@return DB_SUCCESS if OK else error code. */
+dberr_t 
+innodb_do_foreign_cascade(que_thr_t *thr, upd_node_t* node)
+{
+  bool is_delete= (node->is_delete == PLAIN_DELETE);
+
+
+  TABLE *maria_table= find_sql_table_for_update_node(node);
+  ha_innobase *handler= (ha_innobase*)maria_table->file;
+
+
+  //---FILL REC--- TODO: separate function
+  row_prebuilt_t *prebuilt= handler->get_prebuilt(node->table);
+  btr_pcur_t	*pcur = node->pcur;
+  const rec_t* rec = btr_pcur_get_rec(pcur); 
+  dict_index_t *clust_index = dict_table_get_first_index(node->table);
+  const rec_offs*	offsets = rec_get_offsets(
+    rec, 
+    clust_index, 
+    nullptr, 
+    clust_index->n_core_fields, 
+    ULINT_UNDEFINED, 
+    &node->heap
+  );
+
+	if (is_delete)
+  	row_sel_store_mysql_rec(maria_table->record[0], prebuilt, rec, NULL, 
+                         true, clust_index, offsets);
+  //---END FILL REC---
+
+
+  auto *upd_node= prebuilt->upd_node;
+  auto *upd_graph= prebuilt->upd_graph;
+  prebuilt->upd_node= node;
+  prebuilt->upd_graph= static_cast<que_fork_t*>(que_node_get_parent(thr));
+
+	btr_pcur_copy_stored_position(prebuilt->pcur, pcur);
+	prebuilt->sql_stat_start = 0; // a parent table is already locked correctly
+
+
+	if (!is_delete) {
+		row_sel_store_mysql_rec(maria_table->record[1], prebuilt, rec, NULL, 
+                         true, clust_index, offsets);
+
+		if (node->upd_row == NULL) {
+			node->row = row_build(ROW_COPY_DATA, clust_index, rec,
+							offsets, NULL,
+							NULL, NULL, &node->upd_ext, node->heap);
+
+			node->upd_row = dtuple_copy(node->row, node->heap);
+			row_upd_replace(node->upd_row, &node->upd_ext,
+				clust_index, node->update, node->heap);
+  	}
+
+		dtuple_t* entry = row_build_index_entry(node->upd_row, NULL, 
+																						clust_index, 
+																						node->heap);
+
+		ulint n_ext = dtuple_get_n_ext(node->upd_row);
+		
+		ulint size = rec_get_converted_size(clust_index, entry, n_ext);
+		byte *buf = static_cast<byte*>(mem_heap_alloc(node->heap, size));
+
+		rec_t *rec_upd = rec_convert_dtuple_to_rec(buf, clust_index, entry, n_ext);
+		const rec_offs* upd_offsets = rec_get_offsets(
+			rec_upd, clust_index, nullptr, 
+			clust_index->n_core_fields, 
+			ULINT_UNDEFINED, &node->heap);
+
+		//FIXME:Check return value
+		row_sel_store_mysql_rec(maria_table->record[0], prebuilt, rec_upd, 
+														NULL, false, clust_index, upd_offsets); 
+  }
+
+	//// TODO: Refactor to remove the use of the following handler methods:
+	// handler->position(maria_table->record[0]);
+	// handler->ha_rnd_init(false);
+	// handler->rnd_pos(maria_table->record[0], handler->ref);
+	// handler->ha_rnd_end();
+	//**
+
+	if (handler->update_prebuilt_upd_buf())
+    return DB_ERROR; // TODO: DB_OUT_OF_MEMORY
+
+	int err = is_delete ? sql_delete_row(maria_table)
+											: sql_update_row(maria_table);
+
+	prebuilt->upd_node = upd_node;
+	prebuilt->upd_graph = upd_graph;
+	return convert_mysql_error_to_dberr(err);
 }
