storage/innobase/ut/ut0ut.cc
@@ -418,7 +418,6 @@ ut_strerr(
 		return ("File system does not support punch hole (trim) operation.");
 	case DB_PAGE_CORRUPTED:
 		return("Page read from tablespace is corrupted.");
-
 	/* do not add default: in order to produce a warning if new code
 	is added to the enum but not added here */
 	}
